added a mast/gravatar

--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html>
+<head>
+
+#avatar {
+    position: absolute;
+    top: 100px;
+    left: 20px;
+	width:200px;
+	height:200px;
+}
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<div id="container">
+	<div id="mast"
+			<img id="avatar" src="http://www.gravatar.com/avatar/b4b933d545157c6cbce4ab2b9d6c0847.png">
+	</div>
+	<div id="navbar">
+	</div>
+	<div id="content">
+	</div>
+</div>
+
+
 </body>
 </html>
