--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 
+<style>
 #avatar {
     position: absolute;
     top: 100px;
@@ -9,6 +10,8 @@
 	width:200px;
 	height:200px;
 }
+</style>
+
 </head>
 <body>
 
