--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <div id="container">
-	<div id="mast"
+	<div id="mast">
 			<img id="avatar" src="http://www.gravatar.com/avatar/b4b933d545157c6cbce4ab2b9d6c0847.png">
 	</div>
 	<div id="navbar">
