--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 <style>
+
+	@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 html, body {
   height:100%;
+  font-family:'Roboto',sans-serif;
 }
 
 
@@ -18,14 +20,14 @@ html, body {
 }
 
 #mast {
-   height:100px;
+   height:80px;
    background-color:black;
    width:100%;
 }
 
 #navbar {
    width:220px;
-   background-color:red;
+   background-color:#FOFOFO;
    min-height:100%;
    display:flex;
    flex-direction:column;
