--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 <style>
 
-	@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 html, body {
   height:100%;
