--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ html, body {
 
 
 #avatar {
-    position: absolute;
-    top: 50px;
-    left: 20px;
-	width:200px;
-	height:200px;
+  position: absolute;
+  top: 40px;
+  left: 20px;
+  width:100px;
+  height:100px;
 }
 
 #mast {
@@ -27,10 +27,10 @@ html, body {
 
 #navbar {
    width:220px;
-   background-color:#FOFOFO;
    min-height:100%;
    display:flex;
    flex-direction:column;
+   border-right:1px solid black;
 }
 
 
